v0.24.0/_sources/content/user-guide/tutorials/02-linear_inversion/plot_inv_2_inversion_irls.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "content/user-guide/tutorials/02-linear_inversion/plot_inv_2_inversion_irls.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_content_user-guide_tutorials_02-linear_inversion_plot_inv_2_inversion_irls.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_content_user-guide_tutorials_02-linear_inversion_plot_inv_2_inversion_irls.py:


Sparse Inversion with Iteratively Re-Weighted Least-Squares
===========================================================

Least-squares inversion produces smooth models which may not be an accurate
representation of the true model. Here we demonstrate the basics of inverting
for sparse and/or blocky models. Here, we used the iteratively reweighted
least-squares approach. For this tutorial, we focus on the following:

    - Defining the forward problem
    - Defining the inverse problem (data misfit, regularization, optimization)
    - Defining the paramters for the IRLS algorithm
    - Specifying directives for the inversion
    - Recovering a set of model parameters which explains the observations

.. GENERATED FROM PYTHON SOURCE LINES 18-37

.. code-block:: Python


    import numpy as np
    import matplotlib.pyplot as plt

    from discretize import TensorMesh

    from simpeg import (
        simulation,
        maps,
        data_misfit,
        directives,
        optimization,
        regularization,
        inverse_problem,
        inversion,
    )

    # sphinx_gallery_thumbnail_number = 3








.. GENERATED FROM PYTHON SOURCE LINES 38-44

Defining the Model and Mapping
------------------------------

Here we generate a synthetic model and a mappig which goes from the model
space to the row space of our linear operator.


.. GENERATED FROM PYTHON SOURCE LINES 44-65

.. code-block:: Python


    nParam = 100  # Number of model paramters

    # A 1D mesh is used to define the row-space of the linear operator.
    mesh = TensorMesh([nParam])

    # Creating the true model
    true_model = np.zeros(mesh.nC)
    true_model[mesh.cell_centers_x > 0.3] = 1.0
    true_model[mesh.cell_centers_x > 0.45] = -0.5
    true_model[mesh.cell_centers_x > 0.6] = 0

    # Mapping from the model space to the row space of the linear operator
    model_map = maps.IdentityMap(mesh)

    # Plotting the true model
    fig = plt.figure(figsize=(8, 5))
    ax = fig.add_subplot(111)
    ax.plot(mesh.cell_centers_x, true_model, "b-")
    ax.set_ylim([-2, 2])




.. image-sg:: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_001.png
   :alt: plot inv 2 inversion irls
   :srcset: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    (-2.0, 2.0)



.. GENERATED FROM PYTHON SOURCE LINES 66-73

Defining the Linear Operator
----------------------------

Here we define the linear operator with dimensions (nData, nParam). In practive,
you may have a problem-specific linear operator which you would like to construct
or load here.


.. GENERATED FROM PYTHON SOURCE LINES 73-104

.. code-block:: Python


    # Number of data observations (rows)
    nData = 20

    # Create the linear operator for the tutorial. The columns of the linear operator
    # represents a set of decaying and oscillating functions.
    jk = np.linspace(1.0, 60.0, nData)
    p = -0.25
    q = 0.25


    def g(k):
        return np.exp(p * jk[k] * mesh.cell_centers_x) * np.cos(
            np.pi * q * jk[k] * mesh.cell_centers_x
        )


    G = np.empty((nData, nParam))

    for i in range(nData):
        G[i, :] = g(i)

    # Plot the columns of G
    fig = plt.figure(figsize=(8, 5))
    ax = fig.add_subplot(111)
    for i in range(G.shape[0]):
        ax.plot(G[i, :])

    ax.set_title("Columns of matrix G")





.. image-sg:: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_002.png
   :alt: Columns of matrix G
   :srcset: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Columns of matrix G')



.. GENERATED FROM PYTHON SOURCE LINES 105-111

Defining the Simulation
-----------------------

The simulation defines the relationship between the model parameters and
predicted data.


.. GENERATED FROM PYTHON SOURCE LINES 111-115

.. code-block:: Python


    sim = simulation.LinearSimulation(mesh, G=G, model_map=model_map)









.. GENERATED FROM PYTHON SOURCE LINES 116-122

Predict Synthetic Data
----------------------

Here, we use the true model to create synthetic data which we will subsequently
invert.


.. GENERATED FROM PYTHON SOURCE LINES 122-130

.. code-block:: Python


    # Standard deviation of Gaussian noise being added
    std = 0.02
    np.random.seed(1)

    # Create a SimPEG data object
    data_obj = sim.make_synthetic_data(true_model, noise_floor=std, add_noise=True)








.. GENERATED FROM PYTHON SOURCE LINES 131-140

Define the Inverse Problem
--------------------------

The inverse problem is defined by 3 things:

    1) Data Misfit: a measure of how well our recovered model explains the field data
    2) Regularization: constraints placed on the recovered model and a priori information
    3) Optimization: the numerical approach used to solve the inverse problem


.. GENERATED FROM PYTHON SOURCE LINES 140-164

.. code-block:: Python


    # Define the data misfit. Here the data misfit is the L2 norm of the weighted
    # residual between the observed data and the data predicted for a given model.
    # Within the data misfit, the residual between predicted and observed data are
    # normalized by the data's standard deviation.
    dmis = data_misfit.L2DataMisfit(simulation=sim, data=data_obj)

    # Define the regularization (model objective function). Here, 'p' defines the
    # the norm of the smallness term and 'q' defines the norm of the smoothness
    # term.
    reg = regularization.Sparse(mesh, mapping=model_map)
    reg.reference_model = np.zeros(nParam)
    p = 0.0
    q = 0.0
    reg.norms = [p, q]

    # Define how the optimization problem is solved.
    opt = optimization.ProjectedGNCG(
        maxIter=100, lower=-2.0, upper=2.0, maxIterLS=20, maxIterCG=30, tolCG=1e-4
    )

    # Here we define the inverse problem that is to be solved
    inv_prob = inverse_problem.BaseInvProblem(dmis, reg, opt)








.. GENERATED FROM PYTHON SOURCE LINES 165-172

Define Inversion Directives
---------------------------

Here we define any directiveas that are carried out during the inversion. This
includes the cooling schedule for the trade-off parameter (beta), stopping
criteria for the inversion and saving inversion results at each iteration.


.. GENERATED FROM PYTHON SOURCE LINES 172-199

.. code-block:: Python


    # Add sensitivity weights but don't update at each beta
    sensitivity_weights = directives.UpdateSensitivityWeights(every_iteration=False)

    # Reach target misfit for L2 solution, then use IRLS until model stops changing.
    IRLS = directives.UpdateIRLS(max_irls_iterations=40, f_min_change=1e-4)

    # Defining a starting value for the trade-off parameter (beta) between the data
    # misfit and the regularization.
    starting_beta = directives.BetaEstimate_ByEig(beta0_ratio=1e0)

    # Update the preconditionner
    update_Jacobi = directives.UpdatePreconditioner()

    # Save output at each iteration
    saveDict = directives.SaveOutputEveryIteration(save_txt=False)

    # Define the directives as a list
    directives_list = [
        sensitivity_weights,
        IRLS,
        starting_beta,
        update_Jacobi,
        saveDict,
    ]









.. GENERATED FROM PYTHON SOURCE LINES 200-206

Setting a Starting Model and Running the Inversion
--------------------------------------------------

To define the inversion object, we need to define the inversion problem and
the set of directives. We can then run the inversion.


.. GENERATED FROM PYTHON SOURCE LINES 206-216

.. code-block:: Python


    # Here we combine the inverse problem and the set of directives
    inv = inversion.BaseInversion(inv_prob, directives_list)

    # Starting model
    starting_model = 1e-4 * np.ones(nParam)

    # Run inversion
    recovered_model = inv.run(starting_model)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Running inversion with SimPEG v0.24.0

                        simpeg.InvProblem is setting bfgsH0 to the inverse of the eval2Deriv.
                        ***Done using the default solver Pardiso and no solver_opts.***
                    
    model has any nan: 0
    =============================== Projected GNCG ===============================
      #     beta     phi_d     phi_m       f      |proj(x-g)-x|  LS    Comment   
    -----------------------------------------------------------------------------
    x0 has any nan: 0
       0  1.69e+06  3.73e+03  1.02e-09  3.73e+03    1.99e+01      0              
       1  8.46e+05  1.82e+03  3.96e-04  2.16e+03    1.93e+01      0              
       2  4.23e+05  1.23e+03  9.01e-04  1.61e+03    1.89e+01      0   Skip BFGS  
       3  2.12e+05  7.12e+02  1.77e-03  1.09e+03    1.80e+01      0   Skip BFGS  
       4  1.06e+05  3.51e+02  2.97e-03  6.65e+02    1.57e+01      0   Skip BFGS  
       5  5.29e+04  1.52e+02  4.27e-03  3.78e+02    1.37e+01      0   Skip BFGS  
       6  2.64e+04  6.18e+01  5.44e-03  2.06e+02    1.28e+01      0   Skip BFGS  
       7  1.32e+04  2.61e+01  6.37e-03  1.10e+02    1.17e+01      0   Skip BFGS  
    Reached starting chifact with l2-norm regularization: Start IRLS steps...
    irls_threshold 1.1707247707684598
       8  1.32e+04  1.26e+01  9.65e-03  1.40e+02    1.59e+01      0   Skip BFGS  
       9  1.32e+04  2.02e+01  1.01e-02  1.54e+02    1.41e+01      0              
      10  7.98e+03  2.63e+01  1.06e-02  1.11e+02    9.67e+00      0   Skip BFGS  
      11  4.81e+03  2.13e+01  1.18e-02  7.80e+01    9.73e+00      0              
      12  6.16e+03  1.62e+01  1.26e-02  9.41e+01    1.51e+01      0   Skip BFGS  
      13  7.89e+03  2.08e+01  1.19e-02  1.15e+02    1.56e+01      0              
      14  4.67e+03  2.76e+01  1.09e-02  7.83e+01    1.16e+01      0              
      15  2.77e+03  2.09e+01  1.08e-02  5.08e+01    1.13e+01      0              
      16  3.86e+03  1.37e+01  1.08e-02  5.54e+01    1.22e+01      0              
      17  5.13e+03  1.51e+01  9.18e-03  6.22e+01    1.27e+01      0              
      18  6.37e+03  1.72e+01  7.70e-03  6.63e+01    1.22e+01      0              
      19  7.91e+03  1.89e+01  6.52e-03  7.05e+01    1.23e+01      0              
      20  9.83e+03  2.04e+01  5.49e-03  7.44e+01    1.28e+01      0              
      21  1.22e+04  2.18e+01  4.60e-03  7.79e+01    1.35e+01      0              
      22  7.76e+03  2.29e+01  3.85e-03  5.28e+01    1.17e+01      0              
      23  4.93e+03  1.86e+01  3.66e-03  3.67e+01    8.88e+00      0              
      24  6.23e+03  1.66e+01  3.36e-03  3.76e+01    1.89e+01      0   Skip BFGS  
      25  8.34e+03  1.49e+01  2.75e-03  3.79e+01    1.32e+01      0              
      26  1.11e+04  1.50e+01  2.25e-03  4.00e+01    1.35e+01      0              
      27  1.47e+04  1.52e+01  1.83e-03  4.22e+01    1.40e+01      0              
      28  1.93e+04  1.56e+01  1.50e-03  4.45e+01    1.44e+01      0              
      29  2.47e+04  1.61e+01  1.21e-03  4.61e+01    1.47e+01      0              
      30  3.12e+04  1.67e+01  9.61e-04  4.67e+01    1.49e+01      0              
      31  3.86e+04  1.73e+01  7.89e-04  4.77e+01    1.50e+01      0   Skip BFGS  
      32  4.70e+04  1.78e+01  6.48e-04  4.83e+01    1.50e+01      0              
      33  5.72e+04  1.82e+01  5.32e-04  4.86e+01    1.50e+01      0              
      34  6.97e+04  1.84e+01  4.35e-04  4.88e+01    1.52e+01      0              
      35  8.50e+04  1.86e+01  3.48e-04  4.81e+01    1.48e+01      0              
      36  1.04e+05  1.85e+01  2.74e-04  4.68e+01    1.47e+01      0              
      37  1.26e+05  1.83e+01  2.22e-04  4.63e+01    1.45e+01      0              
      38  1.54e+05  1.81e+01  1.79e-04  4.56e+01    1.44e+01      0              
      39  1.87e+05  1.81e+01  1.44e-04  4.51e+01    1.46e+01      0              
      40  2.28e+05  1.83e+01  1.18e-04  4.53e+01    1.47e+01      0              
      41  2.78e+05  1.86e+01  9.95e-05  4.63e+01    1.50e+01      0   Skip BFGS  
      42  3.39e+05  1.90e+01  8.32e-05  4.71e+01    1.50e+01      0              
      43  4.12e+05  1.93e+01  6.96e-05  4.81e+01    1.50e+01      0              
      44  5.02e+05  1.98e+01  5.84e-05  4.91e+01    1.50e+01      0              
      45  6.12e+05  2.02e+01  4.91e-05  5.03e+01    1.50e+01      0              
      46  7.46e+05  2.06e+01  4.15e-05  5.16e+01    1.50e+01      0              
      47  9.09e+05  2.08e+01  3.52e-05  5.28e+01    1.51e+01      0              
    Reach maximum number of IRLS cycles: 40
    ------------------------- STOP! -------------------------
    1 : |fc-fOld| = 0.0000e+00 <= tolF*(1+|f0|) = 3.7318e+02
    1 : |xc-x_last| = 5.4526e-02 <= tolX*(1+|x0|) = 1.0010e-01
    0 : |proj(x-g)-x|    = 1.5134e+01 <= tolG          = 1.0000e-01
    0 : |proj(x-g)-x|    = 1.5134e+01 <= 1e3*eps       = 1.0000e-02
    0 : maxIter   =     100    <= iter          =     48
    ------------------------- DONE! -------------------------




.. GENERATED FROM PYTHON SOURCE LINES 217-220

Plotting Results
----------------


.. GENERATED FROM PYTHON SOURCE LINES 220-261

.. code-block:: Python


    fig, ax = plt.subplots(1, 2, figsize=(12 * 1.2, 4 * 1.2))

    # True versus recovered model
    ax[0].plot(mesh.cell_centers_x, true_model, "k-")
    ax[0].plot(mesh.cell_centers_x, inv_prob.l2model, "b-")
    ax[0].plot(mesh.cell_centers_x, recovered_model, "r-")
    ax[0].legend(("True Model", "Recovered L2 Model", "Recovered Sparse Model"))
    ax[0].set_ylim([-2, 2])

    # Observed versus predicted data
    ax[1].plot(data_obj.dobs, "k-")
    ax[1].plot(inv_prob.dpred, "ko")
    ax[1].legend(("Observed Data", "Predicted Data"))

    # Plot convergence
    fig = plt.figure(figsize=(9, 5))
    ax = fig.add_axes([0.2, 0.1, 0.7, 0.85])
    ax.plot(saveDict.phi_d, "k", lw=2)

    twin = ax.twinx()
    twin.plot(saveDict.phi_m, "k--", lw=2)
    ax.plot(
        np.r_[IRLS.metrics.start_irls_iter, IRLS.metrics.start_irls_iter],
        np.r_[0, np.max(saveDict.phi_d)],
        "k:",
    )
    ax.text(
        IRLS.metrics.start_irls_iter,
        0.0,
        "IRLS Start",
        va="bottom",
        ha="center",
        rotation="vertical",
        size=12,
        bbox={"facecolor": "white"},
    )

    ax.set_ylabel(r"$\phi_d$", size=16, rotation=0)
    ax.set_xlabel("Iterations", size=14)
    twin.set_ylabel(r"$\phi_m$", size=16, rotation=0)



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_003.png
         :alt: plot inv 2 inversion irls
         :srcset: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_004.png
         :alt: plot inv 2 inversion irls
         :srcset: /content/user-guide/tutorials/02-linear_inversion/images/sphx_glr_plot_inv_2_inversion_irls_004.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(865.1527777777777, 0.5, '$\\phi_m$')




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 41.839 seconds)

**Estimated memory usage:**  289 MB


.. _sphx_glr_download_content_user-guide_tutorials_02-linear_inversion_plot_inv_2_inversion_irls.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_inv_2_inversion_irls.ipynb <plot_inv_2_inversion_irls.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_inv_2_inversion_irls.py <plot_inv_2_inversion_irls.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_inv_2_inversion_irls.zip <plot_inv_2_inversion_irls.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
